package protobuf;

// DealType - deal type
enum DealType {
  Board = 0;
  Hole = 1;
  Door = 2;
  //Discard = 3;
}

// DealCards - deal cards
message DealCards {
  optional int32 Pos = 1;
  required bytes Cards = 2;
  required DealType Type = 3;
}

// RequireDiscard - require discard
message RequireDiscard {
  required int32 Pos = 1;
}

// Discarded - discarded n cards
message Discarded {
  required int32 Pos = 1;
  required int32 Num = 2;
}

// DiscardCards - deal discard cards
message DiscardCards {
  required int32 Pos = 1;
  required bytes Cards = 2;
}
